shesmu-server/src/test/resources/bad/missing-action.shesmu
Input gsi_std;

Olive
  Group files = path By accession, donor
  Run nothing With
    memory = 4Gi,
    input = files;
